# Pyxidis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
Code_figures/: Distance_vessel_figure_S4.ipynb
Image_processing/: 0-Training_network.ipynb  1-Saucisson_preprocessing.ipynb  2-Classifying_cells.ipynb  2-Example_CD45_classification.csv  3-Generating_final_data_file.ipynb  4-Example_image_analysis.ipynb  5-Contact_on_graph_vs_random.ipynb
Image_processing/Example_image/border_selection/: selected-data 2.txt  selected-data(1).txt
Image_processing/Example_image/cells_to_remove/: selected-data 2.txt  selected-data(1).txt  selected-data(3).txt  selected-data.txt
Notebooks/Code_figures/: Composition_stroma_figure 4.ipynb  Contact_hemato_stroma_figure_3.ipynb  Contact_hemato_stroma_figure_5.ipynb  Distance_border_figure_3.ipynb  Distance_border_figure_5.ipynb  Distance_border_figure_S5.ipynb  Fig_3_contact_hemato_stroma_E12.ipynb  Fig_5_contact_hemato_stroma_E14.ipynb  Fig_5_dist_border_E12_E14.ipynb  Fig_S4_dist_vessel_E12.ipynb  Fig_S5_dist_border_vessels_E18.ipynb
Notebooks/Image_processing/: 0-Training_network.ipynb  1-Saucisson_preprocessing.ipynb  2-Classifying_cells.ipynb  3-Generating_final_data_file.ipynb  4-Example_image_analysis.ipynb  5-Contact_on_graph_vs_random.ipynb
Notebooks/Image_processing/Data/: CD45_NN_classification.csv  Kit_NN_classification.csv  autofluorescent_cells.txt  border_selection.txt  manual_selection_cells_to_remove.txt  vessels_selection.txt
Notebooks/Image_processing/Example_image/border_selection/: selected-data(1) 2.txt  selected-data(2).txt  selected-data(3).txt  selected-data.txt
Notebooks/Visualization/: 2D_visualisation.ipynb  3D_visualisation.ipynb
Notebooks/Visualization/Data/: data_example_2D.csv  data_example_3D.csv
Visualization/: 2D_visualisation.ipynb  3D_visualisation.ipynb
coloriage-main/coloriage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: image_preparation.py  plot_function.py
src/coloriage/: coloriage.py  readme.md
src/saucisson/: readme.md
(+2 files in other folders)
