[metadata]
name = FL-Image-Analysis
description = Python program to analysis tissue images
author = 
    Valentin Bonnet
    Gustave Ronteix
author_email = valentin.bonnet@pasteur.fr
project_urls = 
    Source code = "https://github.com/BaroudLab/FL-Image-Analysis",
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires=
    numpy
    torch
    torchvision
    copy
    time
    matplotlib
    PIL
    random
    pandas
    glob
    tqdm
    shutil
    tifffile
    griottes
    networkx
    seaborn
    napari
    pyqt6
    statannot
    scipy
    scikit-image
    bokeh
    
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
